Automatic code cleanup.
PiperOrigin-RevId: 424714767